#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
è¿ç§»é…ç½®æ•°æ®åˆ°æ•°æ®åº“
1. åˆ›å»ºæ•°æ®åº“è¡¨
2. è¿ç§»services.envæ•°æ®åˆ°service_configsè¡¨
3. åˆ›å»ºinput_dataæ ¼å¼å®šä¹‰åˆå§‹æ•°æ®
"""

import sys
import os
import json
from pathlib import Path

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
project_root = Path(__file__).resolve().parent.parent.parent
sys.path.insert(0, str(project_root))

from server.config.mysql_config import get_mysql_connection, return_mysql_connection
# ä½¿ç”¨printè¾“å‡ºæ—¥å¿—ï¼Œé¿å…loggeræ¥å£é—®é¢˜


def create_tables():
    """åˆ›å»ºæ•°æ®åº“è¡¨"""
    conn = None
    try:
        conn = get_mysql_connection()
        with conn.cursor() as cursor:
            # ç›´æ¥æ‰§è¡ŒCREATE TABLEè¯­å¥ï¼Œä¸ä½¿ç”¨SQLæ–‡ä»¶
            # 1. åˆ›å»ºservice_configsè¡¨
            create_service_configs_sql = """
            CREATE TABLE IF NOT EXISTS `service_configs` (
                `id` INT PRIMARY KEY AUTO_INCREMENT COMMENT 'é…ç½®ID',
                `config_key` VARCHAR(100) NOT NULL UNIQUE COMMENT 'é…ç½®é”®ï¼ˆå¦‚ï¼šBAZI_CORE_SERVICE_URLï¼‰',
                `config_value` TEXT COMMENT 'é…ç½®å€¼',
                `config_type` VARCHAR(20) DEFAULT 'string' COMMENT 'é…ç½®ç±»å‹ï¼šstring/int/bool/json',
                `description` TEXT COMMENT 'é…ç½®æè¿°',
                `category` VARCHAR(50) COMMENT 'é…ç½®åˆ†ç±»ï¼šgrpc/coze/payment/frontendç­‰',
                `environment` VARCHAR(20) DEFAULT 'production' COMMENT 'ç¯å¢ƒï¼šproduction/development/staging',
                `version` INT DEFAULT 1 COMMENT 'ç‰ˆæœ¬å·',
                `is_active` BOOLEAN DEFAULT 1 COMMENT 'æ˜¯å¦å¯ç”¨',
                `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP COMMENT 'åˆ›å»ºæ—¶é—´',
                `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT 'æ›´æ–°æ—¶é—´',
                INDEX `idx_key` (`config_key`),
                INDEX `idx_category` (`category`),
                INDEX `idx_env` (`environment`),
                INDEX `idx_active` (`is_active`)
            ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='æœåŠ¡é…ç½®è¡¨'
            """
            cursor.execute(create_service_configs_sql)
            print("âœ“ åˆ›å»ºservice_configsè¡¨")
            
            # 2. åˆ›å»ºllm_input_formatsè¡¨
            create_llm_formats_sql = """
            CREATE TABLE IF NOT EXISTS `llm_input_formats` (
                `id` INT PRIMARY KEY AUTO_INCREMENT COMMENT 'æ ¼å¼ID',
                `format_name` VARCHAR(100) NOT NULL UNIQUE COMMENT 'æ ¼å¼åç§°ï¼ˆå¦‚ï¼šfortune_analysis_fullï¼‰',
                `intent` VARCHAR(50) NOT NULL COMMENT 'æ„å›¾ç±»å‹ï¼ˆå¦‚ï¼šwealth/health/career/marriage/generalç­‰ï¼‰',
                `format_type` VARCHAR(50) DEFAULT 'full' COMMENT 'æ ¼å¼ç±»å‹ï¼šfull/minimal/custom',
                `structure` JSON NOT NULL COMMENT 'æ ¼å¼ç»“æ„å®šä¹‰ï¼ˆJSONæ ¼å¼ï¼Œå®šä¹‰éœ€è¦å“ªäº›å­—æ®µï¼‰',
                `description` TEXT COMMENT 'æ ¼å¼æè¿°',
                `version` VARCHAR(20) DEFAULT 'v1.0' COMMENT 'ç‰ˆæœ¬å·',
                `is_active` BOOLEAN DEFAULT 1 COMMENT 'æ˜¯å¦å¯ç”¨',
                `created_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP COMMENT 'åˆ›å»ºæ—¶é—´',
                `updated_at` TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT 'æ›´æ–°æ—¶é—´',
                INDEX `idx_format_name` (`format_name`),
                INDEX `idx_intent` (`intent`),
                INDEX `idx_format_type` (`format_type`),
                INDEX `idx_active` (`is_active`)
            ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='LLMè¾“å…¥æ•°æ®æ ¼å¼å®šä¹‰è¡¨'
            """
            cursor.execute(create_llm_formats_sql)
            print("âœ“ åˆ›å»ºllm_input_formatsè¡¨")
        
        conn.commit()
        print("âœ… æ•°æ®åº“è¡¨åˆ›å»ºæˆåŠŸ")
        return True
    except Exception as e:
        print(f"âŒ åˆ›å»ºæ•°æ®åº“è¡¨å¤±è´¥: {e}")
        if conn:
            conn.rollback()
        return False
    finally:
        if conn:
            return_mysql_connection(conn)


def migrate_services_env():
    """è¿ç§»services.envæ•°æ®åˆ°æ•°æ®åº“"""
    services_env_path = project_root / 'config' / 'services.env'
    
    if not services_env_path.exists():
        print(f"âŒ services.envæ–‡ä»¶ä¸å­˜åœ¨: {services_env_path}")
        return False
    
    # è§£æservices.envæ–‡ä»¶
    configs = []
    categories = {
        'BAZI_CORE_SERVICE_URL': 'grpc',
        'BAZI_FORTUNE_SERVICE_URL': 'grpc',
        'BAZI_ANALYZER_SERVICE_URL': 'grpc',
        'BAZI_RULE_SERVICE_URL': 'grpc',
        'FORTUNE_ANALYSIS_SERVICE_URL': 'grpc',
        'FORTUNE_RULE_SERVICE_URL': 'grpc',
        'PAYMENT_SERVICE_URL': 'grpc',
        'INTENT_SERVICE_URL': 'grpc',
        'PROMPT_OPTIMIZER_SERVICE_URL': 'grpc',
        'COZE_ACCESS_TOKEN': 'coze',
        'COZE_BOT_ID': 'coze',
        'INTENT_BOT_ID': 'coze',
        'FORTUNE_ANALYSIS_BOT_ID': 'coze',
        'DAILY_FORTUNE_ACTION_BOT_ID': 'coze',
        'XISHEN_JISHEN_BOT_ID': 'coze',
        'MARRIAGE_ANALYSIS_BOT_ID': 'coze',
        'CAREER_WEALTH_BOT_ID': 'coze',
        'CHILDREN_STUDY_BOT_ID': 'coze',
        'HEALTH_ANALYSIS_BOT_ID': 'coze',
        'GENERAL_REVIEW_BOT_ID': 'coze',
        'QA_ANALYSIS_BOT_ID': 'coze',
        'QA_QUESTION_GENERATOR_BOT_ID': 'coze',
        'PROMPT_VERSION': 'coze',
        'PROMPT_CACHE_TTL': 'coze',
        'STRIPE_SECRET_KEY': 'payment',
        'PAYPAL_CLIENT_ID': 'payment',
        'PAYPAL_CLIENT_SECRET': 'payment',
        'PAYPAL_MODE': 'payment',
        'FRONTEND_BASE_URL': 'frontend',
    }
    
    try:
        with open(services_env_path, 'r', encoding='utf-8') as f:
            for line in f:
                line = line.strip()
                if not line or line.startswith('#'):
                    continue
                
                # è§£æ export KEY="VALUE" æ ¼å¼
                if line.startswith('export '):
                    line = line[7:].strip()
                    if '=' in line:
                        key, value = line.split('=', 1)
                        key = key.strip()
                        value = value.strip().strip('"').strip("'")
                        
                        # åˆ¤æ–­ç±»å‹
                        config_type = 'string'
                        if value.isdigit():
                            config_type = 'int'
                        elif value.lower() in ('true', 'false', '1', '0', 'yes', 'no'):
                            config_type = 'bool'
                        
                        configs.append({
                            'key': key,
                            'value': value,
                            'type': config_type,
                            'category': categories.get(key, 'other'),
                            'description': f'{key}é…ç½®'
                        })
        
        # æ’å…¥æ•°æ®åº“
        conn = None
        try:
            conn = get_mysql_connection()
            with conn.cursor() as cursor:
                for config in configs:
                    # æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨
                    check_sql = "SELECT id FROM service_configs WHERE config_key = %s"
                    cursor.execute(check_sql, (config['key'],))
                    existing = cursor.fetchone()
                    
                    if existing:
                        # æ›´æ–°
                        update_sql = """
                            UPDATE service_configs 
                            SET config_value = %s, config_type = %s, category = %s, description = %s, updated_at = NOW()
                            WHERE config_key = %s
                        """
                        cursor.execute(update_sql, (
                            config['value'],
                            config['type'],
                            config['category'],
                            config['description'],
                            config['key']
                        ))
                        print(f"âœ“ æ›´æ–°é…ç½®: {config['key']}")
                    else:
                        # æ’å…¥
                        insert_sql = """
                            INSERT INTO service_configs (config_key, config_value, config_type, category, description, environment)
                            VALUES (%s, %s, %s, %s, %s, 'production')
                        """
                        cursor.execute(insert_sql, (
                            config['key'],
                            config['value'],
                            config['type'],
                            config['category'],
                            config['description']
                        ))
                        print(f"âœ“ æ’å…¥é…ç½®: {config['key']}")
            
            conn.commit()
            print(f"âœ… æˆåŠŸè¿ç§» {len(configs)} ä¸ªé…ç½®åˆ°æ•°æ®åº“")
            return True
        except Exception as e:
            print(f"âŒ è¿ç§»é…ç½®å¤±è´¥: {e}")
            if conn:
                conn.rollback()
            return False
        finally:
            if conn:
                return_mysql_connection(conn)
    
    except Exception as e:
        print(f"âŒ è§£æservices.envå¤±è´¥: {e}")
        return False


def create_format_definitions():
    """åˆ›å»ºinput_dataæ ¼å¼å®šä¹‰åˆå§‹æ•°æ® - ä¸ºæ‰€æœ‰åˆ†æç±»å‹åˆ›å»ºæ ¼å¼å®šä¹‰"""
    formats = [
        # 1. é€šç”¨æ ¼å¼ï¼ˆç”¨äºFortuneLLMClientï¼‰
        {
            'format_name': 'fortune_analysis_full',
            'intent': 'general',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'intent': {'source': 'request_param', 'field': 'intent'},
                    'question': {'source': 'request_param', 'field': 'question'},
                    'bazi': {
                        'source': 'redis',
                        'key_template': 'bazi:{solar_date}:{solar_time}:{gender}',
                        'fields': ['pillars', 'day_stem']
                    },
                    'liunian': {
                        'source': 'redis',
                        'key_template': 'fortune:{solar_date}:{solar_time}:{gender}:liunian',
                        'fields': ['year', 'stem', 'branch', 'stem_element', 'branch_element', 'stem_shishen', 'branch_shishen', 'balance_summary', 'relation_summary']
                    },
                    'dayun': {
                        'source': 'redis',
                        'key_template': 'fortune:{solar_date}:{solar_time}:{gender}:dayun',
                        'fields': ['stem', 'branch']
                    },
                    'xi_ji': {
                        'source': 'redis',
                        'key_template': 'fortune:{solar_date}:{solar_time}:{gender}:xi_ji',
                        'fields': ['xi_shen', 'ji_shen'],
                        'transform': {'xi_shen': 'slice:0:5', 'ji_shen': 'slice:0:5'}
                    },
                    'wangshuai': {
                        'source': 'redis',
                        'key_template': 'fortune:{solar_date}:{solar_time}:{gender}:wangshuai'
                    },
                    'matched_rules': {
                        'source': 'redis',
                        'key_template': 'rules:{solar_date}:{solar_time}:{gender}:{intent}',
                        'fields': ['rules_by_intent', 'rules_count'],
                        'optional': True
                    },
                    'language_style': {
                        'source': 'static',
                        'value': 'é€šä¿—æ˜“æ‡‚ï¼Œé¿å…ä¸“ä¸šæœ¯è¯­ï¼Œé¢å‘æ™®é€šç”¨æˆ·ã€‚ç”¨æ—¥å¸¸è¯­è¨€è§£é‡Šå‘½ç†æ¦‚å¿µï¼Œå¦‚"æ­£å®˜"å¯ä»¥è¯´æˆ"ç¨³å®šçš„å·¥ä½œæœºä¼š"ï¼Œ"ä¸ƒæ€"å¯ä»¥è¯´æˆ"æŒ‘æˆ˜å’Œå‹åŠ›"ã€‚'
                    },
                    'category': {
                        'source': 'request_param',
                        'field': 'category',
                        'optional': True
                    }
                }
            },
            'description': 'å®Œæ•´æ ¼å¼ï¼šåŒ…å«æ‰€æœ‰å­—æ®µçš„input_dataæ ¼å¼ï¼ˆç”¨äºFortuneLLMClientï¼‰'
        },
        {
            'format_name': 'fortune_analysis_minimal',
            'intent': 'general',
            'format_type': 'minimal',
            'structure': {
                'fields': {
                    'intent': {'source': 'request_param', 'field': 'intent'},
                    'question': {'source': 'request_param', 'field': 'question'},
                    'category': {'source': 'request_param', 'field': 'category', 'optional': True},
                    'bazi': {
                        'source': 'redis',
                        'key_template': 'bazi:{solar_date}:{solar_time}:{gender}',
                        'fields': ['pillars', 'day_stem']
                    },
                    'language_style': {
                        'source': 'static',
                        'value': 'é€šä¿—æ˜“æ‡‚ï¼Œé¿å…ä¸“ä¸šæœ¯è¯­ï¼Œé¢å‘æ™®é€šç”¨æˆ·ã€‚ç”¨æ—¥å¸¸è¯­è¨€è§£é‡Šå‘½ç†æ¦‚å¿µï¼Œå¦‚"æ­£å®˜"å¯ä»¥è¯´æˆ"ç¨³å®šçš„å·¥ä½œæœºä¼š"ï¼Œ"ä¸ƒæ€"å¯ä»¥è¯´æˆ"æŒ‘æˆ˜å’Œå‹åŠ›"ã€‚'
                    },
                    'note': {
                        'source': 'static',
                        'value': 'å…«å­—è¯¦ç»†ä¿¡æ¯å·²åœ¨ç¬¬ä¸€æ¬¡è°ƒç”¨æ—¶æä¾›ï¼Œæœ¬æ¬¡åªåŸºäºç”¨æˆ·é—®é¢˜å’Œç±»åˆ«ç”Ÿæˆç­”æ¡ˆã€‚è¯·å¿«é€Ÿå“åº”ï¼Œåœ¨10ç§’å†…ç”Ÿæˆå†…å®¹ã€‚'
                    }
                }
            },
            'description': 'ç²¾ç®€æ ¼å¼ï¼šåªåŒ…å«å¿…è¦å­—æ®µçš„input_dataæ ¼å¼'
        },
        {
            'format_name': 'fortune_analysis_simple',
            'intent': 'general',
            'format_type': 'custom',
            'structure': {
                'fields': {
                    'question': {'source': 'request_param', 'field': 'question'},
                    'intent': {'source': 'request_param', 'field': 'intent'},
                    'confidence': {'source': 'request_param', 'field': 'confidence', 'optional': True},
                    'bazi_info': {
                        'source': 'redis',
                        'key_template': 'bazi:{solar_date}:{solar_time}:{gender}',
                        'fields': ['solar_date', 'solar_time', 'gender', 'pillars', 'day_stem', 'element_counts']
                    },
                    'fortune_context': {
                        'source': 'redis',
                        'key_template': 'fortune:{solar_date}:{solar_time}:{gender}:context',
                        'optional': True
                    }
                }
            },
            'description': 'ç®€å•æ ¼å¼ï¼šç”¨äºFortuneAnalysisLLMClient'
        },
        # 2. æ„Ÿæƒ…å©šå§»åˆ†ææ ¼å¼
        {
            'format_name': 'marriage_analysis',
            'intent': 'marriage',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'mingpan_zonglun': {
                        'source': 'redis',
                        'key_template': 'marriage:{solar_date}:{solar_time}:{gender}:mingpan',
                        'fields': ['bazi_pillars', 'ten_gods', 'wangshuai', 'branch_relations', 'day_pillar']
                    },
                    'peiou_tezheng': {
                        'source': 'redis',
                        'key_template': 'marriage:{solar_date}:{solar_time}:{gender}:peiou',
                        'fields': ['ten_gods', 'deities', 'marriage_judgments', 'peach_blossom_judgments', 'matchmaking_judgments', 'zhengyuan_judgments']
                    },
                    'ganqing_zoushi': {
                        'source': 'redis',
                        'key_template': 'marriage:{solar_date}:{solar_time}:{gender}:ganqing',
                        'fields': ['current_dayun', 'key_dayuns', 'ten_gods']
                    },
                    'shensha_dianjing': {
                        'source': 'redis',
                        'key_template': 'marriage:{solar_date}:{solar_time}:{gender}:shensha',
                        'fields': ['deities']
                    },
                    'jianyi_fangxiang': {
                        'source': 'redis',
                        'key_template': 'marriage:{solar_date}:{solar_time}:{gender}:jianyi',
                        'fields': ['ten_gods', 'xi_ji', 'current_dayun', 'key_dayuns']
                    }
                }
            },
            'description': 'æ„Ÿæƒ…å©šå§»åˆ†ææ ¼å¼ï¼šåŒ…å«å‘½ç›˜æ€»è®ºã€é…å¶ç‰¹å¾ã€æ„Ÿæƒ…èµ°åŠ¿ã€ç¥ç…ç‚¹ç›ã€å»ºè®®æ–¹å‘'
        },
        # 3. äº‹ä¸šè´¢å¯Œåˆ†ææ ¼å¼
        {
            'format_name': 'career_wealth_analysis',
            'intent': 'career_wealth',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'mingpan_shiye_caifu_zonglun': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:mingpan',
                        'fields': ['day_master', 'bazi_pillars', 'wuxing_distribution', 'wangshuai', 'wangshuai_detail', 'yue_ling', 'yue_ling_shishen', 'gender', 'geju_type', 'geju_description', 'ten_gods']
                    },
                    'shiye_xing_gong': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:shiye',
                        'fields': ['shiye_xing', 'month_pillar_analysis', 'ten_gods', 'ten_gods_stats', 'deities', 'career_judgments']
                    },
                    'caifu_xing_gong': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:caifu',
                        'fields': ['caifu_xing', 'year_pillar_analysis', 'hour_pillar_analysis', 'shishang_shengcai', 'caiku', 'wealth_judgments']
                    },
                    'shiye_yunshi': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:yunshi',
                        'fields': ['current_dayun', 'key_dayuns', 'ten_gods']
                    },
                    'caifu_yunshi': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:caifu_yunshi',
                        'fields': ['current_dayun', 'key_dayuns', 'ten_gods']
                    },
                    'jianyi_fangxiang': {
                        'source': 'redis',
                        'key_template': 'career_wealth:{solar_date}:{solar_time}:{gender}:jianyi',
                        'fields': ['fangwei', 'hangye', 'xi_ji', 'current_dayun', 'key_dayuns']
                    }
                }
            },
            'description': 'äº‹ä¸šè´¢å¯Œåˆ†ææ ¼å¼ï¼šåŒ…å«å‘½ç›˜æ€»è®ºã€äº‹ä¸šæ˜Ÿä¸äº‹ä¸šå®«ã€è´¢å¯Œæ˜Ÿä¸è´¢å¯Œå®«ã€äº‹ä¸šè¿åŠ¿ã€è´¢å¯Œè¿åŠ¿ã€å»ºè®®æ–¹å‘'
        },
        # 4. å­å¥³å­¦ä¹ åˆ†ææ ¼å¼
        {
            'format_name': 'children_study_analysis',
            'intent': 'children_study',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'mingpan_zinv_zonglun': {
                        'source': 'redis',
                        'key_template': 'children_study:{solar_date}:{solar_time}:{gender}:mingpan',
                        'fields': ['bazi_pillars', 'ten_gods', 'wangshuai', 'branch_relations', 'day_pillar']
                    },
                    'zinvxing_zinvgong': {
                        'source': 'redis',
                        'key_template': 'children_study:{solar_date}:{solar_time}:{gender}:zinvxing',
                        'fields': ['zinv_xing_type', 'zinv_xing_analysis', 'hour_pillar_analysis', 'ten_gods', 'deities', 'children_judgments']
                    },
                    'shengyu_shiji': {
                        'source': 'redis',
                        'key_template': 'children_study:{solar_date}:{solar_time}:{gender}:shengyu',
                        'fields': ['current_dayun', 'key_dayuns', 'all_dayuns', 'ten_gods']
                    },
                    'yangyu_jianyi': {
                        'source': 'redis',
                        'key_template': 'children_study:{solar_date}:{solar_time}:{gender}:yangyu',
                        'fields': ['ten_gods', 'xi_ji', 'current_dayun', 'key_dayuns']
                    },
                    'children_rules': {
                        'source': 'redis',
                        'key_template': 'children_study:{solar_date}:{solar_time}:{gender}:rules',
                        'fields': ['matched_rules', 'rules_count', 'rule_judgments'],
                        'optional': True
                    }
                }
            },
            'description': 'å­å¥³å­¦ä¹ åˆ†ææ ¼å¼ï¼šåŒ…å«å‘½ç›˜æ€»è®ºã€å­å¥³æ˜Ÿä¸å­å¥³å®«ã€ç”Ÿè‚²æ—¶æœºã€å…»è‚²å»ºè®®ã€å­å¥³è§„åˆ™'
        },
        # 5. èº«ä½“å¥åº·åˆ†ææ ¼å¼
        {
            'format_name': 'health_analysis',
            'intent': 'health',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'mingpan_jiankang_zonglun': {
                        'source': 'redis',
                        'key_template': 'health:{solar_date}:{solar_time}:{gender}:mingpan',
                        'fields': ['bazi_pillars', 'day_pillar', 'wuxing_distribution', 'wangshuai', 'yue_ling', 'ten_gods', 'ten_gods_stats']
                    },
                    'wuxing_pingheng': {
                        'source': 'redis',
                        'key_template': 'health:{solar_date}:{solar_time}:{gender}:wuxing',
                        'fields': ['wuxing_balance', 'wuxing_relations', 'pathology_tendency']
                    },
                    'zangfu_tiaoyang': {
                        'source': 'redis',
                        'key_template': 'health:{solar_date}:{solar_time}:{gender}:zangfu',
                        'fields': ['body_algorithm', 'wuxing_tuning', 'zangfu_care']
                    },
                    'jiankang_yunshi': {
                        'source': 'redis',
                        'key_template': 'health:{solar_date}:{solar_time}:{gender}:yunshi',
                        'fields': ['current_dayun', 'key_dayuns', 'special_liunians', 'ten_gods']
                    },
                    'jianyi_fangxiang': {
                        'source': 'redis',
                        'key_template': 'health:{solar_date}:{solar_time}:{gender}:jianyi',
                        'fields': ['xi_ji', 'wuxing_tuning', 'zangfu_care', 'current_dayun', 'key_dayuns']
                    }
                }
            },
            'description': 'èº«ä½“å¥åº·åˆ†ææ ¼å¼ï¼šåŒ…å«å‘½ç›˜æ€»è®ºã€äº”è¡Œå¹³è¡¡ã€è„è…‘è°ƒå…»ã€å¥åº·è¿åŠ¿ã€å»ºè®®æ–¹å‘'
        },
        # 6. æ€»è¯„åˆ†ææ ¼å¼
        {
            'format_name': 'general_review_analysis',
            'intent': 'general',
            'format_type': 'full',
            'structure': {
                'fields': {
                    'mingpan_hexin_geju': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:mingpan',
                        'fields': ['bazi_pillars', 'day_pillar', 'wuxing_distribution', 'wangshuai', 'yue_ling', 'geju_type', 'geju_description', 'ten_gods', 'ten_gods_stats']
                    },
                    'xingge_tezheng': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:xingge',
                        'fields': ['personality_traits', 'rizhu_analysis', 'character_judgments']
                    },
                    'guanjian_dayun': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:dayun',
                        'fields': ['current_dayun', 'key_dayuns', 'special_liunians']
                    },
                    'zhongsheng_tidian': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:zhongsheng',
                        'fields': ['xishen', 'jishen', 'xi_ji_elements']
                    },
                    'jiankang_tiaoyang': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:jiankang',
                        'fields': ['wuxing_balance', 'pathology_tendency', 'wuxing_tuning', 'zangfu_care']
                    },
                    'zonghe_pingjia': {
                        'source': 'redis',
                        'key_template': 'general_review:{solar_date}:{solar_time}:{gender}:zonghe',
                        'fields': ['rizhu_rules', 'character_rules', 'summary_rules']
                    }
                }
            },
            'description': 'æ€»è¯„åˆ†ææ ¼å¼ï¼šåŒ…å«å‘½ç›˜æ ¸å¿ƒæ ¼å±€ã€æ€§æ ¼ç‰¹å¾ã€å…³é”®å¤§è¿ã€é‡ç”Ÿå‘½ç‚¹ã€å¥åº·è°ƒå…»ã€ç»¼åˆè¯„ä»·'
        },
        # 7. AIé—®ç­”æ ¼å¼
        {
            'format_name': 'qa_conversation',
            'intent': 'qa',
            'format_type': 'custom',
            'structure': {
                'fields': {
                    'question': {'source': 'request_param', 'field': 'question'},
                    'session_id': {'source': 'request_param', 'field': 'session_id'},
                    'bazi_info': {
                        'source': 'redis',
                        'key_template': 'qa:{session_id}:bazi',
                        'fields': ['solar_date', 'solar_time', 'gender', 'pillars', 'day_stem']
                    },
                    'conversation_history': {
                        'source': 'redis',
                        'key_template': 'qa:{session_id}:history',
                        'optional': True
                    }
                }
            },
            'description': 'AIé—®ç­”æ ¼å¼ï¼šåŒ…å«é—®é¢˜ã€ä¼šè¯IDã€å…«å­—ä¿¡æ¯ã€å¯¹è¯å†å²'
        }
    ]
    
    conn = None
    try:
        conn = get_mysql_connection()
        with conn.cursor() as cursor:
            for format_def in formats:
                # æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨
                check_sql = "SELECT id FROM llm_input_formats WHERE format_name = %s"
                cursor.execute(check_sql, (format_def['format_name'],))
                existing = cursor.fetchone()
                
                structure_json = json.dumps(format_def['structure'], ensure_ascii=False)
                
                if existing:
                    # æ›´æ–°
                    update_sql = """
                        UPDATE llm_input_formats 
                        SET intent = %s, format_type = %s, structure = %s, description = %s, updated_at = NOW()
                        WHERE format_name = %s
                    """
                    cursor.execute(update_sql, (
                        format_def['intent'],
                        format_def['format_type'],
                        structure_json,
                        format_def['description'],
                        format_def['format_name']
                    ))
                    print(f"âœ“ æ›´æ–°æ ¼å¼å®šä¹‰: {format_def['format_name']}")
                else:
                    # æ’å…¥
                    insert_sql = """
                        INSERT INTO llm_input_formats (format_name, intent, format_type, structure, description, version)
                        VALUES (%s, %s, %s, %s, %s, 'v1.0')
                    """
                    cursor.execute(insert_sql, (
                        format_def['format_name'],
                        format_def['intent'],
                        format_def['format_type'],
                        structure_json,
                        format_def['description']
                    ))
                    print(f"âœ“ æ’å…¥æ ¼å¼å®šä¹‰: {format_def['format_name']}")
        
        conn.commit()
        print(f"âœ… æˆåŠŸåˆ›å»º {len(formats)} ä¸ªæ ¼å¼å®šä¹‰")
        return True
    except Exception as e:
        print(f"âŒ åˆ›å»ºæ ¼å¼å®šä¹‰å¤±è´¥: {e}")
        if conn:
            conn.rollback()
        return False
    finally:
        if conn:
            return_mysql_connection(conn)


def main():
    """ä¸»å‡½æ•°"""
    print("ğŸš€ å¼€å§‹è¿ç§»é…ç½®æ•°æ®åˆ°æ•°æ®åº“...")
    
    # 1. åˆ›å»ºæ•°æ®åº“è¡¨
    print("ğŸ“‹ æ­¥éª¤1: åˆ›å»ºæ•°æ®åº“è¡¨...")
    if not create_tables():
        print("âŒ åˆ›å»ºæ•°æ®åº“è¡¨å¤±è´¥")
        return False
    
    # 2. è¿ç§»services.envæ•°æ®
    print("ğŸ“‹ æ­¥éª¤2: è¿ç§»services.envæ•°æ®...")
    if not migrate_services_env():
        print("âŒ è¿ç§»services.envæ•°æ®å¤±è´¥")
        return False
    
    # 3. åˆ›å»ºæ ¼å¼å®šä¹‰åˆå§‹æ•°æ®
    print("ğŸ“‹ æ­¥éª¤3: åˆ›å»ºæ ¼å¼å®šä¹‰åˆå§‹æ•°æ®...")
    if not create_format_definitions():
        print("âŒ åˆ›å»ºæ ¼å¼å®šä¹‰åˆå§‹æ•°æ®å¤±è´¥")
        return False
    
    print("âœ… æ‰€æœ‰é…ç½®æ•°æ®è¿ç§»å®Œæˆï¼")
    return True


if __name__ == '__main__':
    success = main()
    sys.exit(0 if success else 1)

